# hecDerivativesMSc

./: .gitignore  README.md  README_fr.md  pyproject.toml
bintree/: BINOMIAL_TREE_README.md  VISUALIZATION_GUIDE.md  __init__.py  example_forward_binomial_tree.py  forward_binomial_tree.py  quickstart_binomial_tree.py  test_fast_pricer.py  test_performance.py  test_print_parameters.py  test_visualization.py
theme_01/: forward_pricing_problems.ipynb  forward_pricing_problems_fr.ipynb  probability_problem_generator.ipynb  probability_problem_generator_fr.ipynb
theme_02/: binomial_tree_practice_app.py  market-option-prices-binomial-model.ipynb
theme_03/: convexity-adjustment-fr.ipynb  convexity-adjustment.ipynb  normal-distributions-fr.ipynb  normal-distributions.ipynb
theme_05/: american_european_delta_difference.py  option_greeks_app.py
